-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.1, Qt Creator 16.0.0-beta2
-
None
-
-
fce61829b (16.0)
Prepare to Reproduce:
1. Install Git in Windows 11
2. Change Shell path to C:/Program Files/Git/bin/bash.exe
Steps to Reproduce:
1. Open Terminal in Qt Creator
2. Press Close Tab
Observed Behavior:
The bash.exe process does not terminate.
When the Shell path is C:\Windows\System32\cmd.exe or C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe, the process is terminated.
Expected Behavior:
The bash.exe process needs to be terminated.
Note: If it's not a bug, I apologize for the inconvenience
.
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-32509 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 624929,3 | Terminal: Don't forcibly kill conpty process | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |